--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
   "author": "Yogesh",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "method-override": "^3.0.0",
     "mongoose": "^5.4.4",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0",
+    "passport-local": "^1.0.0"
   }
 }
